<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="32dp"
android:paddingRight="32dp"
android:paddingBottom="16dp"
android:paddingTop="16dp"
tools:context="co.edu.ucc.formulario.MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:src="@drawable/formulario_2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/nombres"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txt_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidos"
            android:inputType="" />

        <EditText
            android:id="@+id/txt_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txt_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:inputType="phone" />

        <EditText
            android:id="@+id/txt_celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/celular"
            android:inputType="phone" />
        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enviar_datos"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>
</FrameLayout>
